--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td><img width="200" src="./images/me.jpeg" alt="phil profile picture"></td>
+            <td><img width="200" src="images/me.jpeg" alt="phil profile picture"></td>
             <td>
                 <h1>Phil Kang</h1>
                 <p><em>People Analytics/Software <strong><a href="https://www.google.com">Engineer</a></strong></em></p>
@@ -69,7 +69,7 @@
 
     <hr>
 
-    <a href="./hobbies.html">My Hobbies</a>
-    <a href="./contact.html">Contact Me</a>
+    <a href="hobbies.html">My Hobbies</a>
+    <a href="contact.html">Contact Me</a>
 </body>
 </html>
